fixed some errors on woolman

--- a/journal-writings/modernized/06-chapter-4.adoc
+++ b/journal-writings/modernized/06-chapter-4.adoc
@@ -52,7 +52,8 @@ and be so supported as to remain unmoved at the faces of men.
 
 As it is common for Friends on such a visit to have entertainment free of cost,
 a difficulty arose in my mind with respect to saving my money by kindness received,
-which to me appeared to be the gain of oppression. Receiving a gift, considered as a gift,
+which to me appeared to be the gain of oppression.
+Receiving a gift, considered as a gift,
 brings the receiver under obligations to the benefactor,
 and has a natural tendency to draw the obliged into a party with the giver.
 
