--- a/journal-writings/modernized/07-chapter-5.adoc
+++ b/journal-writings/modernized/07-chapter-5.adoc
@@ -78,7 +78,7 @@ These committees meeting together, had a weighty conference in the fear of the L
 at which time,
 I perceived there were many Friends under a scruple like that before-mentioned.^
 footnote:[Christians refused to pay taxes to support Heathen temples.
-See Primitive Christianity, part III. page 327]
+See [.book-title] #Primitive Christianity#, part III. page 327]
 
 As scrupling to pay a tax on account of the application,
 has seldom been heard of heretofore, even amongst men of integrity,
