--- a/journal-writings/modernized/09-chapter-7.adoc
+++ b/journal-writings/modernized/09-chapter-7.adoc
@@ -2,7 +2,8 @@
 
 [.chapter-synopsis]
 * His visit in company with Samuel Eastburn, to Long Island, Rhode Island, Boston, etc., in New England
-* Remarks on the slave trade at Newport, and his exercise on that account; also on lotteries--Some observations on the island of Nantucket.
+* Remarks on the slave trade at Newport, and his exercise on that account; also on lotteries
+* Some observations on the island of Nantucket.
 
 Having for some time past felt a sympathy in my mind with Friends eastward,
 I opened my concern in our Monthly Meeting; and obtaining a certificate,
