--- a/journal-writings/modernized/13-chapter-11.adoc
+++ b/journal-writings/modernized/13-chapter-11.adoc
@@ -1,7 +1,8 @@
 == Chapter XI
 
 [.chapter-synopsis]
-* Preparing to visit Friends in England--Embarks at Chester, in company with Samuel Emlen, in a ship bound to London
+* Preparing to visit Friends in England
+* Embarks at Chester, in company with Samuel Emlen, in a ship bound to London
 * His deep exercise, in observing the difficulties and hardships the common sailors are exposed to
 * Considerations on the dangers to which youth are exposed, in being trained to a sea-faring life; and its inconsistency with a pious education
 * Thoughts in a storm at sea; with many instructive contemplations on the voyage
